# DynamicFloatCompressor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Codec/: dfc.c  dfc.h
